--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.65",
+    "ai": "^3.4.8",
     "graphql-request": "^7.1.0",
     "next": "14.2.8",
+    "openai": "^4.67.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sanitize-html": "^2.13.0",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
